@@ -1,4 +1,8 @@
-22016/06/04 v50
+2016/06/06 v52
+	1. The auto hide stance bar won't be shown when updated.
+	2. The updating for the auto popup bars will be delayed for 0.1 sec, to block too many BAG_UPDATE at a same time. And fix the items won't be displayed when player first enter the game world.
+
+2016/06/04 v50
 	1. An auto hide system is built based on macro condition.
 
 2016/06/03 v49
